Closed
Bug 571610
Opened 15 years ago
Closed 15 years ago
"ASSERTION: Can't create document accessible!" in test_focus.html
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla2.0b11
People
(Reporter: jruderman, Assigned: surkov)
References
Details
(Keywords: assertion, testcase)
Attachments
(1 file)
923 bytes,
patch
|
davidb
:
review+
davidb
:
approval2.0+
|
Details | Diff | Splinter Review |
I noticed this while looking at a green mochitest-a11y log on Linux.
chrome://mochikit/content/a11y/accessible/events/test_focus.html
###!!! ASSERTION: Can't create document accessible!: 'docAcc', file /builds/slave/mozilla-central-linux-debug/build/accessible/src/base/nsAccDocManager.cpp, line 332
###!!! ASSERTION: Older event target is a descendant of recent event target!: 'Not Reached', file /builds/slave/mozilla-central-linux-debug/build/accessible/src/base/nsEventShell.cpp, line 376
###!!! ASSERTION: Can only call this on frames that have been reflowed: '!(GetStateBits() & NS_FRAME_FIRST_REFLOW)', file /builds/slave/mozilla-central-linux-debug/build/layout/generic/nsTextFrameThebes.cpp, line 2069
Flags: in-testsuite+
Assignee | ||
Comment 1•15 years ago
|
||
(In reply to comment #0)
> ###!!! ASSERTION: Can't create document accessible!: 'docAcc', file
> /builds/slave/mozilla-central-linux-debug/build/accessible/src/base/nsAccDocManager.cpp,
> line 332
this assertion can be removed because for example web progress listener notifies about initial documents load which aren't accessible.
> ###!!! ASSERTION: Older event target is a descendant of recent event target!:
> 'Not Reached', file
> /builds/slave/mozilla-central-linux-debug/build/accessible/src/base/nsEventShell.cpp,
> line 376
there's no such assertion in trunk anymore
> ###!!! ASSERTION: Can only call this on frames that have been reflowed:
> '!(GetStateBits() & NS_FRAME_FIRST_REFLOW)', file
> /builds/slave/mozilla-central-linux-debug/build/layout/generic/nsTextFrameThebes.cpp,
> line 2069
this one is fixed by bug 626660
Assignee | ||
Comment 2•15 years ago
|
||
Assignee: nobody → surkov.alexander
Status: NEW → ASSIGNED
Attachment #508233 -
Flags: review?(bolterbugz)
Attachment #508233 -
Flags: approval2.0?
Comment 3•15 years ago
|
||
Comment on attachment 508233 [details] [diff] [review]
patch
Fine with me.
Attachment #508233 -
Flags: review?(bolterbugz)
Attachment #508233 -
Flags: review+
Attachment #508233 -
Flags: approval2.0?
Attachment #508233 -
Flags: approval2.0+
Assignee | ||
Comment 4•15 years ago
|
||
landed on 2.0 beta 11 - http://hg.mozilla.org/mozilla-central/rev/1c9b037420c1
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b11
You need to log in
before you can comment on or make changes to this bug.
Description
•