Bug 571610 - ASSERTION: Can't create document accessible, r=davidb, a=davidb